--- a/config/frame.yaml
+++ b/config/frame.yaml
@@ -1,309 +1,7 @@
-# global variables
-# https://code.ishumei.com/nextdata/re-voice/-/blob/master/shumei/config/config.json.sh-audio7#L584
-GlobalAudioTypes: &GlobalAudioTypes
-  - MOAN
-  - ANTHEN
-  - AUDIOPOLITICAL
-  - AUDIOSCENE
-  - BANEDAUDIO
-  - EMOTION
-  - GENDER
-  - LANGUAGE
-  - MINOR
-  - SCENE
-  - SING
-  - TIMBRE
-  - VOICE
-  - AGE
-GlobalAsrTypes: &GlobalAsrTypes
-  - ABUSE
-  - AD
-  - POLITICAL
-  - POLITICS
-  - PORN
-  - APPNAME
-  - ADLAW
-  - POLITY # 文本type规范化
-  - EROTIC # 文本type规范化
-  - DIRTY # 文本type规范化
-  - ADVERT # 文本type规范化
-  - AUDIOTEXTRISK # 文本type规范化
-GlobalAsrConfig: &GlobalAsrConfig
-  Audio:
-    Json: true
-  AsrTypes: *GlobalAsrTypes
-  # 为了兼容需要下掉
-  AudioTypes: *GlobalAudioTypes
-  TimeoutMs: 2000
-  Retries: 1
-  MoveFeaturesKeys:
-    # 兼容音频文件
-    - From:
-        - "be-voice-asr"
-        - "audioText"
-        - "asr_text"
-      To:
-        - "be-voice-asr"
-        - "text"
-    - From:
-        - "be-voice-asr"
-        - "audioText"
-        - "model_version"
-      To:
-        - "be-voice-asr"
-        - "version"
-# configuration
-Port: 8185
-Debug: false
-Mock: false
-Filter:
-  Enable: true
-  ServiceIds:
-    - "POST_AUDIO"
-    - "POST_AUDIO_EN" # 不一定有用
-    - "POST_AUDIO_B" # 不一定有用
-    - "POST_AUDIO_AR" # 不一定有用
-    - "POST_AUDIOSTREAM"
-    - "POST_AUDIOSTREAM_EN" # 不一定有用
-    - "POST_AUDIOSTREAM_B" # 不一定有用
-    - "POST_AUDIOSTREAM_AR" # 不一定有用
-    - "POST_VIDEO"
-    - "POST_VIDEO_EN" # 不一定有用
-    - "POST_VIDEO_AR" # 不一定有用
-    - "POST_VIDEOSTREAM"
-    - "POST_VIDEOSTREAM_EN" # 不一定有用
-    - "POST_VIDEOSTREAM_AR" # 不一定有用
-    - "POST_VIDEOSTREAM_AUDIO"
-    - "POST_VIDEOSTREAM_AUDIO_EN" # 不一定有用
-    - "POST_VIDEOSTREAM_AUDIO_AR" # 不一定有用
-  Products:
-    - "PRODUCT_AUDIO"
-    - "PRODUCT_TEXT"
-    - "PRODUCT_TEXT_EN" # 不一定有用
-    - "PRODUCT_TEXT_AR" # 不一定有用
-    - "PRODUCT_TEXT_HI" # 不一定有用
-    - "PRODUCT_TEXT_ES" # 不一定有用
-    - "PRODUCT_TEXT_FR" # 不一定有用
-    - "PRODUCT_TEXT_RU" # 不一定有用
-    - "PRODUCT_TEXT_PT" # 不一定有用
-    - "PRODUCT_TEXT_ID" # 不一定有用
-    - "PRODUCT_TEXT_DE" # 不一定有用
-    - "PRODUCT_TEXT_JA" # 不一定有用
-    - "PRODUCT_TEXT_TR" # 不一定有用
-    - "PRODUCT_TEXT_VI" # 不一定有用
-    - "PRODUCT_TEXT_IT" # 不一定有用
-    - "PRODUCT_TEXT_TH" # 不一定有用
-    - "PRODUCT_TEXT_TL" # 不一定有用
-    - "PRODUCT_TEXT_KO" # 不一定有用
-    - "PRODUCT_TEXT_MS" # 不一定有用
-  QueryFieldPaths:
-    - - "riskLabel1"
-    - - "riskLabel2"
-    - - "riskLabel3"
-    - - "isListRule"
-    - - "riskLabelPath"
-    - - "labelId"
-    - - "conditions"
-ServiceName: '/request-engine/re-audio-ng'
-Registry:
-  Enabled: true
-  Metabase: ":2181"
-  TimeoutMs: 5000
-Http:
-  Enabled: true
-  FrequencyMs: 5000
-OpenTelemetry:
-  Enabled: false
-  Address: ":4317"
-Sentinel:
-  Enabled: true
-  SystemRules:
-    # 自适应流控，启发因子为 load1 >= 8
-    - MetricType: 0 # system.Load
-      TriggerCountFactor: 3.0 # trigger count factor * cpu cores num = trigger count
-      # TriggerCount: 48.0 # set this value, overwrite 
-      Strategy: 1 # system.BBR
-    #- MetricType: 4 # system.CpuUsage
-    #  TriggerCount: 0.8 # TODO:
-    #  Strategy: 1 # system.BBR
-Overload:
-  Enabled: true
-  MemPercent: 95
-Log:
-  Dir: log
-  Loggers:
-    - Name: re-audio-ng
-      Level: info
-      # Level: debug
-      Buffered: true
-      MaxSize: 2048
-      MaxAge: 7
-      MaxBackups: 40
-      Outputs:
-        - File
-        # - Console
-    - Name: error-re-audio-ng
-      Level: error
-      MaxSize: 2048
-      MaxAge: 7
-      MaxBackups: 10
-      Outputs:
-        - File
-Model:
-  BasePath: '/{{env "ENV_ROLE"}}/arbiter/models'
-  Filter: true
-  ModelOptions:
-    be-voice-classification-v2:
-      Audio:
-        Json: true
-      AudioTypes: *GlobalAudioTypes
-      TimeoutMs: 2000
-      Retries: 1
-    # https://code.ishumei.com/arch/guardian/-/blob/master/src/arbiter/conf/base/models.json
-    be-asr-corrector:
-      AsrTypes: *GlobalAsrTypes
-      # 为了兼容需要下掉
-      AudioTypes: *GlobalAsrAudioTypes
-      AsrPrecondition: true
-      TimeoutMs: 2000
-      Retries: 1
-      MoveFeaturesKeys:
-        # 兼容音频文件
-        - From:
-            - "be-asr-corrector"
-            - "model_version"
-          To:
-            - "be-asr-corrector"
-            - "version"
-        - From:
-            - "be-asr-corrector"
-            - "corrector_text"
-          To:
-            - "be-asr-corrector"
-            - "text"
-    be-voice-asr-temp:
-      <<: *GlobalAsrConfig
-    be-voice-asr-streams:
-      <<: *GlobalAsrConfig
-    be-voice-asr-highrecall:
-      <<: *GlobalAsrConfig
-    be-voice-asr-english:
-      <<: *GlobalAsrConfig
-    be-voice-asr-ecommerce:
-      <<: *GlobalAsrConfig
-    be-voice-asr-codeswitch:
-      <<: *GlobalAsrConfig
-    be-voice-asr-audiobook:
-      <<: *GlobalAsrConfig
-    be-voice-asr-arab:
-      <<: *GlobalAsrConfig
-    be-voice-asr-thirdparty:
-      <<: *GlobalAsrConfig
-      TimeoutMs: 10000
-    be-voice-asr2:
-      <<: *GlobalAsrConfig
-    be-voice-asr:
-      <<: *GlobalAsrConfig
-Apollo:
-  ae-text:
-    Path: '/{{env "ENV_ROLE"}}/re/ae_v2'
-    TimeoutMs: 2000
-    Retries: 1
-    StrategyProduct: text
-  ae-audio:
-    Path: '/{{env "ENV_ROLE"}}/re/ae_v2'
-    TimeoutMs: 2000
-    Retries: 1
-    StrategyProduct: audio
-Placeholder:
-  placeholder-begin:
-    Enable: true
-  placeholder-mid:
-    Enable: true
-    Move:
-      MoveFeatures: true
-      MoveFeaturesKeys:
-        - From:
-            - "be-asr-corrector"
-            - "corrector_text"
-          To:
-            - "data"
-            - "original_text"
-        - From:
-            - "be-asr-corrector"
-            - "corrector_text"
-          To:
-            - "data"
-            - "text"
-        - From:
-            - "be-asr-corrector"
-            - "corrector_text"
-          To:
-            - "be-voice-asr"
-            - "audioText"
-            - "asr_text"
-  placeholder-merge-ae:
-    Enable: true
-  placeholder-end:
-    Enable: true
-    Move:
-      MoveFeatures: true
-      MoveFeaturesKeys:
-        - From:
-            - "be-voice-asr"
-            - "audioText"
-            - "asr_text"
-          To:
-            - "audioText"
-        - From:
-            - "be-asr-corrector"
-            - "corrector_text"
-          To:
-            - "audioText"
-        - From:
-            - "audioText"
-          To:
-            - "riskDetail"
-            - "audioText"
-        - From:
-            - "be-voice-classification-v2"
-          To:
-            - "be_features"
-            - "be-voice-classification-v2"
-    Omit:
-      OmitNil: true
-      Keys:
-        - "be-voice-asr" # dag
-        - "be-asr-corrector" # dag
-        - "be-voice-classification-v2" # dag
-        - "data" # dag
-        # - "be_result_in_history_record" # video需要
-        - "be-text-classification"
-        - "be-text-detection"
-        - "contact"
-        # - "profile"  #历史记录需要
-        - "sexy_risk_tokenid"
-        - "original_text_context"
-        - "original_text"
-        # - "contextText" # video需要
-        - "tokenScore"
-        - "labels" # ae text出来的
-    Complete:
-      EmptyInterfaceArray:
-        - "eval_hits"
-        - "allLabels"
-        - "businessLabels"
-Sentry:
-  DBConfig:
-    Host: "10.66.191.34"
-    Port: 3306
-    User: "root"
-    Password: "5FEBgxpD7vvWTUeOPhCIAw=="
-    DbName: "sentry"
-    ConnTimeout: 1000
-    ReadTimeout: 1000
-    WriteTimeout: 1000
-    MaxOpenConn: 100
-    MaxIdleConn: 2
-    TimeInterval: 50
-    RetryCount: 2
+bizRouteConfig:
+  sortation:
+    clusterKey: common
+    index: sortation_fs0_a
+  blog:
+    clusterKey: common
+    index: blog_fs0_a
